--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,36 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hartwig = pd.read_csv('hartwig.csv')"
+    "hartwig = pd.read_csv('newyork1924.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Game Number', 'Move Number', 'Player', 'Move', 'Comment'], dtype='object')"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hartwig.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -79,40 +59,40 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>White</td>\n",
-       "      <td>e4 e5</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>b2b4</td>\n",
+       "      <td>WHAT?!?! In the true hypermodern style, Tartak...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>Black</td>\n",
-       "      <td>f4 Bc5</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>e7e6</td>\n",
+       "      <td>Maroczy (Black) makes an illogical move of his...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>White</td>\n",
-       "      <td>Nf3 d6</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>c1b2</td>\n",
+       "      <td>Tartakower doesn't need to defend the pawn yet...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>Black</td>\n",
-       "      <td>Nc3 Nc6</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>g8f6</td>\n",
+       "      <td>Maroczy follows more conventional lines, devel...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>5</td>\n",
        "      <td>White</td>\n",
-       "      <td>Bb5 Bg4</td>\n",
-       "      <td>The first four moves might be out of fashion, ...</td>\n",
+       "      <td>b4b5</td>\n",
+       "      <td>Tartakower inhibits the development of Black's...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -123,81 +103,81 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>561</th>\n",
-       "      <td>15</td>\n",
-       "      <td>37</td>\n",
-       "      <td>White</td>\n",
-       "      <td>f3 Nf5</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>562</th>\n",
-       "      <td>15</td>\n",
-       "      <td>38</td>\n",
+       "      <th>10512</th>\n",
+       "      <td>110</td>\n",
+       "      <td>96</td>\n",
        "      <td>Black</td>\n",
-       "      <td>Rxf5 Rxf5</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>d7d8</td>\n",
+       "      <td>The King goes to the only square that still al...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>563</th>\n",
-       "      <td>15</td>\n",
-       "      <td>39</td>\n",
+       "      <th>10513</th>\n",
+       "      <td>110</td>\n",
+       "      <td>97</td>\n",
        "      <td>White</td>\n",
-       "      <td>Rd7+ Kg6</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>a7a8</td>\n",
+       "      <td>To draw, all Marshall needs to do now is keep ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>564</th>\n",
-       "      <td>15</td>\n",
-       "      <td>40</td>\n",
+       "      <th>10514</th>\n",
+       "      <td>110</td>\n",
+       "      <td>98</td>\n",
        "      <td>Black</td>\n",
-       "      <td>Rxb7 Rf4</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>d8c7</td>\n",
+       "      <td>Despite his material advantage and threat on t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>565</th>\n",
-       "      <td>15</td>\n",
-       "      <td>41</td>\n",
+       "      <th>10515</th>\n",
+       "      <td>110</td>\n",
+       "      <td>99</td>\n",
        "      <td>White</td>\n",
-       "      <td>Rxa7</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>a8a7</td>\n",
+       "      <td>Marshall checks again...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10516</th>\n",
+       "      <td>110</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>c7d8</td>\n",
+       "      <td>...and Reti retreats. Rather than play out the...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>566 rows × 5 columns</p>\n",
+       "<p>10517 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Game Number  Move Number Player       Move  \\\n",
-       "0              1            1  White      e4 e5   \n",
-       "1              1            2  Black     f4 Bc5   \n",
-       "2              1            3  White     Nf3 d6   \n",
-       "3              1            4  Black    Nc3 Nc6   \n",
-       "4              1            5  White    Bb5 Bg4   \n",
-       "..           ...          ...    ...        ...   \n",
-       "561           15           37  White     f3 Nf5   \n",
-       "562           15           38  Black  Rxf5 Rxf5   \n",
-       "563           15           39  White   Rd7+ Kg6   \n",
-       "564           15           40  Black   Rxb7 Rf4   \n",
-       "565           15           41  White       Rxa7   \n",
+       "       Game Number  Move Number Player  Move  \\\n",
+       "0                1            1  White  b2b4   \n",
+       "1                1            2  Black  e7e6   \n",
+       "2                1            3  White  c1b2   \n",
+       "3                1            4  Black  g8f6   \n",
+       "4                1            5  White  b4b5   \n",
+       "...            ...          ...    ...   ...   \n",
+       "10512          110           96  Black  d7d8   \n",
+       "10513          110           97  White  a7a8   \n",
+       "10514          110           98  Black  d8c7   \n",
+       "10515          110           99  White  a8a7   \n",
+       "10516          110          100  Black  c7d8   \n",
        "\n",
-       "                                               Comment  \n",
-       "0                                                  NaN  \n",
-       "1                                                  NaN  \n",
-       "2                                                  NaN  \n",
-       "3                                                  NaN  \n",
-       "4    The first four moves might be out of fashion, ...  \n",
-       "..                                                 ...  \n",
-       "561                                                NaN  \n",
-       "562                                                NaN  \n",
-       "563                                                NaN  \n",
-       "564                                                NaN  \n",
-       "565                                                NaN  \n",
+       "                                                 Comment  \n",
+       "0      WHAT?!?! In the true hypermodern style, Tartak...  \n",
+       "1      Maroczy (Black) makes an illogical move of his...  \n",
+       "2      Tartakower doesn't need to defend the pawn yet...  \n",
+       "3      Maroczy follows more conventional lines, devel...  \n",
+       "4      Tartakower inhibits the development of Black's...  \n",
+       "...                                                  ...  \n",
+       "10512  The King goes to the only square that still al...  \n",
+       "10513  To draw, all Marshall needs to do now is keep ...  \n",
+       "10514  Despite his material advantage and threat on t...  \n",
+       "10515                           Marshall checks again...  \n",
+       "10516  ...and Reti retreats. Rather than play out the...  \n",
        "\n",
-       "[566 rows x 5 columns]"
+       "[10517 rows x 5 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,6 +185,52 @@
    "source": [
     "hartwig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5076\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_nans = hartwig['Comment'].isna().sum()\n",
+    "print(num_nans)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from transformers import BertTokenizer, GPT2LMHeadModel\n",
+    "\n",
+    "# Define model and tokenizer\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-multilingual-cased\")\n",
+    "model = GPT2LMHeadModel.from_pretrained(\"gpt2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -223,12 +249,7 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "from transformers import BertTokenizer, GPT2LMHeadModel\n",
     "\n",
-    "# Define model and tokenizer\n",
-    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-multilingual-cased\")\n",
-    "model = GPT2LMHeadModel.from_pretrained(\"gpt2\")\n",
     "\n",
     "# Hyperparameters\n",
     "learning_rate = 2e-5\n",
