--- a/gru.ipynb
+++ b/gru.ipynb
@@ -7,13 +7,32 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import torch "
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/abdulmk/opt/anaconda3/envs/chess/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from transformers import GPT2LMHeadModel\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2087,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2267,7 +2286,7 @@
        "[3063 rows x 6 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2278,27 +2297,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 5,  7,  9, 11, 13,  9,  7,  5],\n",
-       "       [ 3,  3,  3,  3,  3,  3,  3,  3],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 2,  2,  2,  2,  2,  2,  2,  2],\n",
-       "       [ 4,  6,  8, 10, 12,  8,  6,  4]])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "df['Comment'] = df['Comment'].fillna('')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -2319,8 +2329,281 @@
     "    return board_array\n",
     "\n",
     "# Example usage:\n",
-    "df[\"Board\"].apply(lambda x : create_board_array(x)).iloc[0]\n",
+    "board_states = df[\"Board\"].apply(lambda x : create_board_array(x))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import GPT2Tokenizer\n",
+    "\n",
+    "# Create the tokenizer\n",
+    "tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
+    "\n",
+    "# Tokenize the comments\n",
+    "tokenized_comments = df[\"Comment\"].apply(lambda x: tokenizer.encode(x, add_special_tokens=True))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moves = df[\"Move\"].apply(lambda x: UCI_MOVES[x])\n",
+    "turn = df[\"Player\"].apply(lambda x: TURN[x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class ChessDataset(Dataset):\n",
+    "    def __init__(self, board_states, moves,turn,tokenized_comments,move_number,game_id):\n",
+    "        self.board_states = board_states\n",
+    "        self.moves = moves\n",
+    "        self.turn = turn\n",
+    "        self.comment = tokenized_comments\n",
+    "        self.move_number = move_number\n",
+    "        self.game_id = game_id\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.board_states)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        return {\n",
+    "            \"board\": torch.tensor(self.board_states[idx], dtype=torch.long),\n",
+    "            \"move\": torch.tensor(self.moves[idx], dtype=torch.long),\n",
+    "            \"turn\": torch.tensor(self.turn[idx], dtype=torch.long),\n",
+    "            \"comment\": torch.tensor(self.comment[idx], dtype=torch.long),\n",
+    "            \"move_number\": torch.tensor(self.move_number[idx], dtype=torch.long),\n",
+    "            \"game_id\": torch.tensor(self.game_id[idx], dtype=torch.long)\n",
+    "        }\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chessdata = ChessDataset(board_states, moves ,turn,tokenized_comments,df['Move Number'],df['Game Number'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'board': tensor([[ 5,  7,  9, 11, 13,  9,  7,  5],\n",
+       "         [ 3,  3,  3,  3,  3,  3,  3,  3],\n",
+       "         [ 0,  0,  0,  0,  0,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  0,  0,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  0,  0,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  0,  0,  0,  0,  0],\n",
+       "         [ 2,  2,  2,  2,  2,  2,  2,  2],\n",
+       "         [ 4,  6,  8, 10, 12,  8,  6,  4]]),\n",
+       " 'move': tensor(757),\n",
+       " 'turn': tensor(1),\n",
+       " 'comment': tensor([  47, 6326, 2743,  709, 5341,  352,   13,  304,   19,  287,  881,  262,\n",
+       "          976,  835,  355,  597,  286,  262,  584, 1353,   12, 5715, 6951,   82,\n",
+       "           13]),\n",
+       " 'move_number': tensor(1),\n",
+       " 'game_id': tensor(1)}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chessdata[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "class ChessCommentaryGenerator(nn.Module):\n",
+    "  def __init__(self):\n",
+    "    super().__init__()\n",
+    "\n",
+    "    # CNN Encoder for board representation\n",
+    "    self.cnn = nn.Sequential(\n",
+    "      nn.Conv2d(1, 32, kernel_size=3, padding=1),\n",
+    "      nn.ReLU(),\n",
+    "      nn.MaxPool2d(2),\n",
+    "      nn.Conv2d(32, 64, kernel_size=3, padding=1),\n",
+    "      nn.ReLU(),\n",
+    "      nn.MaxPool2d(2),\n",
+    "      nn.Flatten()\n",
+    "    )\n",
+    "\n",
+    "    # Embedding layers for move ID, move number, and turn\n",
+    "    self.move_embedding = nn.Embedding(len(UCI_MOVES), 32)  \n",
+    "    self.turn_embedding = nn.Embedding(2, 4)  # Assuming two players\n",
+    "\n",
+    "    # RNN for processing concatenated representation\n",
+    "    self.rnn = nn.LSTM(96, 64, batch_first=True)  # Input size = 64 (CNN) + 32  + 4\n",
+    "    self.linear = nn.Linear(64, 768)\n",
+    "    # Transformer decoder for commentary generation\n",
+    "    self.decoder = GPT2LMHeadModel.from_pretrained(\"gpt2\")\n",
+    "    \n",
+    "\n",
+    "  def forward(self, board, move_id, move_number, turn):\n",
+    "\n",
+    "    board_embedding = self.cnn(board.unsqueeze(1))  # Add channel dimension for CNN\n",
+    "    concat_embedding = torch.cat([\n",
+    "      board_embedding,\n",
+    "      self.move_embedding(move_id).unsqueeze(0),\n",
+    "      torch.tensor(move_number).view(-1, 1),\n",
+    "      self.turn_embedding(turn).unsqueeze(0)\n",
+    "    ], dim=1)\n",
+    "\n",
+    "    rnn_output, _ = self.rnn(concat_embedding)\n",
+    "    rnn_output = self.linear(rnn_output)\n",
+    "      # Use last hidden state as context\n",
+    "\n",
+    "    decoder_output = self.decoder(input_ids=None, past_key_values=None, inputs_embeds=rnn_output)\n",
+    "    return decoder_output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ChessCommentaryGenerator()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "criterion = nn.CrossEntropyLoss()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_loss(logits, target, tokenizer):\n",
+    "  \"\"\"\n",
+    "  Calculates cross-entropy loss with padding handling.\n",
+    "\n",
+    "  Args:\n",
+    "      logits: Output logits from the decoder (shape: batch_size, sequence_length, vocab_size).\n",
+    "      target: Target commentary sequence as a list of lists (shape: batch_size, sequence_length).\n",
+    "      tokenizer: Tokenizer object for vocabulary access.\n",
+    "\n",
+    "  Returns:\n",
+    "      loss: Cross-entropy loss with padding masked out.\n",
+    "  \"\"\"\n",
+    "\n",
+    "  # Get padding token ID\n",
+    "  pad_token_id = tokenizer.pad_token_id\n",
+    "\n",
+    "  # Get maximum sequence length in the batch\n",
+    "  max_len = len(target)\n",
+    "\n",
+    "  # Pad target sequences to max length\n",
+    "  padded_target = torch.nn.functional.pad(\n",
+    "      torch.tensor([t + [pad_token_id] * (max_len - len(t)) for t in target]),\n",
+    "      padding=(0, 1),  # Pad at the end\n",
+    "      value=pad_token_id\n",
+    "  )\n",
+    "\n",
+    "  # Create mask for non-padded elements\n",
+    "  mask = padded_target != pad_token_id\n",
+    "\n",
+    "  # Flatten logits and target for efficient loss calculation\n",
+    "  logits_flat = logits.view(-1, logits.size(-1))\n",
+    "  target_flat = padded_target.masked_select(mask).view(-1)\n",
+    "\n",
+    "  # Calculate cross-entropy loss with reduction='mean' for averaging\n",
+    "  loss = torch.nn.functional.cross_entropy(logits_flat, target_flat, reduction='mean')\n",
+    "  return loss\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([  47, 6326, 2743,  709, 5341,  352,   13,  304,   19,  287,  881,  262,\n",
+      "         976,  835,  355,  597,  286,  262,  584, 1353,   12, 5715, 6951,   82,\n",
+      "          13])\n",
+      "torch.Size([1, 50257])\n",
+      "torch.Size([25])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/05/052ncv8d7qlfb__v03p6cqlm0000gn/T/ipykernel_3460/2829073205.py:34: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  torch.tensor(move_number).view(-1, 1),\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "0D or 1D target tensor expected, multi-target not supported",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[47], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(logits\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcomment\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m---> 18\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfunctional\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcross_entropy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlogits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcomment\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43munsqueeze\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreduction\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmean\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Calculate loss and backpropagate\u001b[39;00m\n\u001b[1;32m     20\u001b[0m loss\u001b[38;5;241m.\u001b[39mbackward()\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/chess/lib/python3.9/site-packages/torch/nn/functional.py:3059\u001b[0m, in \u001b[0;36mcross_entropy\u001b[0;34m(input, target, weight, size_average, ignore_index, reduce, reduction, label_smoothing)\u001b[0m\n\u001b[1;32m   3057\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m size_average \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m reduce \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   3058\u001b[0m     reduction \u001b[38;5;241m=\u001b[39m _Reduction\u001b[38;5;241m.\u001b[39mlegacy_get_string(size_average, reduce)\n\u001b[0;32m-> 3059\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_C\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_nn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcross_entropy_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_Reduction\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_enum\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduction\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mignore_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabel_smoothing\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: 0D or 1D target tensor expected, multi-target not supported"
+     ]
+    }
+   ],
+   "source": [
+    "# Load dataset, optimizer, loss function (similar to previous code snippet)\n",
+    "prev_gno = -1\n",
+    "# Training loop\n",
+    "for epoch in range(1):\n",
+    "  for data in chessdata:\n",
+    "    # Forward pass\n",
+    "    if prev_gno != data['game_id']:\n",
+    "        prev_gno = data['game_id']\n",
+    "        model.rnn.hidden = (torch.zeros(1, 1, 64), torch.zeros(1, 1, 64))\n",
+    "        \n",
+    "    print(data[\"comment\"])\n",
+    "        \n",
+    "    decoder_output = model(data[\"board\"].float().reshape(1,8,8), data[\"move\"], data[\"move_number\"], data[\"turn\"])\n",
+    "    logits = decoder_output.logits\n",
+    "    # loss = calculate_loss(decoder_output.logits, data[\"comment\"], tokenizer)\n",
+    "    print(logits.shape)\n",
+    "    print(data[\"comment\"].shape)\n",
+    "    loss = torch.nn.functional.cross_entropy(logits, data[\"comment\"])\n",
+    "    # Calculate loss and backpropagate\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    optimizer.zero_grad()\n",
+    "\n",
+    "    # Print training progress (optional)\n"
    ]
   },
   {
